--- a/_posts/2017-09-22-Dior-Eyes.md
+++ b/_posts/2017-09-22-Dior-Eyes.md
@@ -15,5 +15,5 @@ color:
   r: 93
   g: 93
   b: 93
-description: Dior Eyes is a custom headset I made at Digitas for the luxury brand Dior. I coded the app (Android) and the back-office (Slim PHP). Great experience, beside coding, I learnt a lot, from object prototyping to project delivery.
+description: Dior Eyes is a custom headset we made at Digitas for the luxury brand Dior. I coded the app (Android) and the back-office (Slim PHP). Great experience, beside coding, I learnt a lot, from object prototyping to project delivery.
 ---
