Reorder projects ; corrects descriptions

--- a/_posts/2004-01-01-polymn.md
+++ b/_posts/2004-01-01-polymn.md
@@ -10,7 +10,7 @@ color:
   r: 96
   g: 160
   b: 200
-description: Because recommendations algorithms are taking more and more places in our lives, we created Polymn, an usual WebGL website to discover new music. I made the website development and design. Using React.js for the display & Three.js for the 3D. My first projet with homemade shaders !
+description: Because recommendations algorithms are taking more and more space in our lives, we created Polymn, an usual WebGL website to discover new music. I made the website development and design. Using React.js for the display & Three.js for the 3D. My first projet with homemade shaders !
 credits:
   - name: Adrien Vanderpotte
     link: http://avdp.xyz/
