--- a/_posts/2006-01-01-stiqr.md
+++ b/_posts/2006-01-01-stiqr.md
@@ -11,7 +11,7 @@ color:
   r: 49
   g: 28
   b: 249
-description: stiqr is an augmented reality app made with Vuforia. This app is a result of an user experience research on young people in museums. Guess we can call it an international app, it’s coded in Swift, Objective C, and C++.
+description: stiqr is an augmented reality app made with Vuforia. This app is a result of an user experience research on young people behaviour in museums. Guess we can call it an international app, it’s coded in Swift, Objective C, and C++.
 credits:
   - name: Sofia Boggio
     link: http://sofiaboggio.fr/
