--- a/_posts/2004-01-01-polymn.md
+++ b/_posts/2004-01-01-polymn.md
@@ -17,5 +17,5 @@ credits:
   - name: Victoire Douy
     link: http://vyctoire.com
   - name: Chloé Chanteperdrix
-    link: http://
+    link: https://www.behance.net/chloechant2624
 ---
