--- a/_posts/2009-01-01-nike.md
+++ b/_posts/2009-01-01-nike.md
@@ -4,14 +4,12 @@ title: Nike Face Tuned
 subtitle: Nike
 year: 2018
 preview: /assets/images/articles/nike/nike.gif
-link: 
 type: project
 color:
   r: 255
   g: 102
   b: 0
-description: For the 20 years anniversary of the Nike Tn, I coded an augmented reality iPad app using Face ID. We
-teamed up with the studio DVTK and the 3D artist Ines Alpha to make it happen. Guests at the event could record small videos and send them by mail from the app. It was made with Unity. 
+description: For the 20 years anniversary of the Nike Tn, I coded an augmented reality iPad app using Face ID. We teamed up with the studio DVTK and the 3D artist Ines Alpha to make it happen. Guests at the event could record small videos and send them by mail from the app. It was made with Unity.
 credits:
   - name: Ines Alpha
     link: https://www.instagram.com/ines.alpha/
