--- a/_posts/2009-01-01-nike.md
+++ b/_posts/2009-01-01-nike.md
@@ -6,10 +6,10 @@ year: 2018
 preview: /assets/images/articles/nike/nike.gif
 type: project
 color:
-  r: 255
-  g: 102
-  b: 0
-description: For the 20 years anniversary of the Nike Tn, I coded an augmented reality iPad app using Face ID. We teamed up with the studio DVTK and the 3D artist Ines Alpha to make it happen. Guests at the event could record small videos and send them by mail from the app. It was made with Unity.
+  r: 197
+  g: 58
+  b: 251
+description: Nike Face Tuned was made for the 20 years anniversary of the Nike TN. We teamed up with the studio DVTK and the <a href="https://www.instagram.com/ines.alpha/">3D artist Ines Alpha</a>3D artist Ines Alpha to make an augmented reality iPad app using Face ID. Guests at the event could record videos and send them by mail from the app. It was made with Unity, and uses Face ID from ARKit.
 credits:
   - name: Ines Alpha
     link: https://www.instagram.com/ines.alpha/
