--- a/_posts/2009-01-01-nike.md
+++ b/_posts/2009-01-01-nike.md
@@ -9,7 +9,7 @@ color:
   r: 197
   g: 58
   b: 251
-description: Nike Face Tuned was made for the 20 years anniversary of the Nike TN. We teamed up with the studio <a href="https://www.dvtk.us/">DVTK</a> and the 3D artist<a href="https://www.instagram.com/ines.alpha/"> Ines Alpha</a> to make an augmented reality iPad app using Face ID. Guests at the event could record videos and send them by mail from the app. It was made with Unity, and uses Face ID from ARKit.
+description: Nike Face Tuned was made for the 20 years anniversary of the Nike TN. We teamed up with the studio <a href="https://www.dvtk.us/" target="_blank">DVTK</a> and the 3D artist<a href="https://www.instagram.com/ines.alpha/" target="_blank"> Ines Alpha</a> to make an augmented reality iPad app using Face ID. Guests at the event could record videos and send them by mail from the app. It was made with Unity, and uses Face ID from ARKit.
 credits:
   - name: Ines Alpha
     link: https://www.instagram.com/ines.alpha/
