Change year to type de projet vite fait

--- a/_posts/2002-01-01-ido.md
+++ b/_posts/2002-01-01-ido.md
@@ -2,7 +2,7 @@
 layout: post
 title: ido
 subtitle: Gobelins
-year: 2017
+year: installation
 preview: /assets/images/articles/ido/cover.jpg
 type: project
 color:
