--- a/_posts/2004-01-01-polymn.md
+++ b/_posts/2004-01-01-polymn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Polymn
 subtitle: Gobelins
-year: 2016
+year: web 3D
 preview: /assets/images/articles/polymn/blob.gif
 link: http://polymn.avdp.xyz/
 type: project
