--- a/_posts/2006-01-01-stiqr.md
+++ b/_posts/2006-01-01-stiqr.md
@@ -2,7 +2,7 @@
 layout: post
 title: stiqr
 subtitle: Gobelins
-year: 2017
+year: app (iOS)
 preview: /assets/images/articles/stiqr/cover.jpg
 link: http://stiqr.kevinmoutier.com/
 vimeo-id: 221714503
