--- a/_posts/2007-01-01-ruinart.md
+++ b/_posts/2007-01-01-ruinart.md
@@ -2,9 +2,9 @@
 layout: post
 title: Invisible Shadow
 subtitle: Ruinart
-year: 2016
+year: installation
 preview: /assets/images/articles/ruinart/cover.png
-video: https://youtu.be/pKMPSlAbIyo 
+video: https://youtu.be/pKMPSlAbIyo
 type: project
 color:
   r: 200
