--- a/_posts/2008-01-01-Dior-Eyes.md
+++ b/_posts/2008-01-01-Dior-Eyes.md
@@ -2,7 +2,7 @@
 layout: post
 title: Dior Eyes
 subtitle: Dior
-year: 2017
+year: app (Android)
 vimeo-id: 235007077
 video: http://vimeo.com/235007077
 credits:
