Publicis Sapient updated

--- a/_posts/2008-01-01-Dior-Eyes.md
+++ b/_posts/2008-01-01-Dior-Eyes.md
@@ -6,8 +6,8 @@ year: app (Android)
 vimeo-id: 235007077
 video: http://vimeo.com/235007077
 credits:
-  - name: DigitasLBi Labs
-    link: http://digitaslabsparis.com
+  - name: Publicis.Sapient Labs
+    link: https://www.publicissapient.fr/
 preview: /assets/images/articles/dioreyes/cover.jpg
 link: http://digitaslabsparis.com/post/165619166204/dior-eyes
 type: project
