--- a/_posts/2007-01-01-ruinart.md
+++ b/_posts/2007-01-01-ruinart.md
@@ -12,6 +12,6 @@ color:
   b: 124
 description: An interactive installation for Ruinart we did at Digitas Labs. I made the software (openFrameworks) that uses a Kinect to detect people, and the wiring to connect the software to an Arduino. We installed it in Cannes, were it successfully ran on its own for 1 week. I also did a home-made software for us to create and edit strips animations.
 credits:
-  - name: DigitasLBi Labs
-    link: http://digitaslabsparis.com/
+  - name: Publicis.Sapient Labs
+    link: https://www.publicissapient.fr/
 ---
