--- a/_posts/2010-01-01-shr.md
+++ b/_posts/2010-01-01-shr.md
@@ -11,7 +11,7 @@ color:
   r: 59
   g: 191
   b: 121
-description: Stay Home Roulette is an iOS app made during the French confinement. Stay Home Roulette helps you diversify and find new activities to do at home. Monthly updated, the app is also collaborative, you can add new activities or tips and share them to the community. You can find it on the <a href="https://apps.apple.com/eg/app/stay-home-roulette/id1505788769" target="_blank" style="color:rgb(59,191,121)">iOS App Store</a>, where I spent weeks to make it accepted because Apple didn't like its former name "Corona Roulette".
+description: Stay Home Roulette is an iOS app made during the French confinement. Stay Home Roulette helps you diversify and find new activities to do at home. Monthly updated, the app is also collaborative, you can add new activities or tips and share them to the community. You can find the app on the <a href="https://apps.apple.com/eg/app/stay-home-roulette/id1505788769" target="_blank" style="color:rgb(59,191,121)">iOS App Store</a>, where I spent weeks to make it accepted because Apple didn't like its former name "Corona Roulette".
 credits:
   - name: Adrien Muzyczka
     link: http://adrien-muzyczka.fr/
